==> duvallee/STM32F746Discovery/Src/ethernetif.c <==
#include "stm32f7xx_hal.h"
#include "lwip/opt.h"
#include "lwip/timeouts.h"
#include "netif/ethernet.h"
#include "netif/etharp.h"
#include "lwip/ethip6.h"
#include "ethernetif.h"
#include <string.h>
#include "debug_output.h"
#include "cmsis_os.h"
#define TIME_WAITING_FOR_INPUT                           (portMAX_DELAY)
#define INTERFACE_THREAD_STACK_SIZE                      (350)
#define IFNAME0                                          's'
#define IFNAME1                                          't'

void HAL_ETH_MspInit(ETH_HandleTypeDef* ethHandle)
{
   GPIO_InitTypeDef GPIO_InitStruct;

   debug_output_info(" \r\n");
   if (ethHandle->Instance == ETH)
   {
      /** ETH GPIO Configuration    
      RMII_REF_CLK ----------------------> PA1
      RMII_MDIO -------------------------> PA2
      RMII_MDC --------------------------> PC1
      RMII_MII_CRS_DV -------------------> PA7
      RMII_MII_RXD0 ---------------------> PC4
      RMII_MII_RXD1 ---------------------> PC5
      RMII_MII_RXER ---------------------> PG2
      RMII_MII_TX_EN --------------------> PG11
      RMII_MII_TXD0 ---------------------> PG13
      RMII_MII_TXD1 ---------------------> PG14
      */

      GPIO_InitStruct.Pin                                = GPIO_PIN_1 | GPIO_PIN_2 | GPIO_PIN_7;
      GPIO_InitStruct.Mode                               = GPIO_MODE_AF_PP;
      GPIO_InitStruct.Pull                               = GPIO_NOPULL;
      GPIO_InitStruct.Speed                              = GPIO_SPEED_HIGH;
      GPIO_InitStruct.Alternate                          = GPIO_AF11_ETH;
      HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);

      GPIO_InitStruct.Pin                                = GPIO_PIN_1 | GPIO_PIN_4 | GPIO_PIN_5;
      GPIO_InitStruct.Mode                               = GPIO_MODE_AF_PP;
      GPIO_InitStruct.Pull                               = GPIO_NOPULL;
      GPIO_InitStruct.Speed                              = GPIO_SPEED_HIGH;
      GPIO_InitStruct.Alternate                          = GPIO_AF11_ETH;
      HAL_GPIO_Init(GPIOC, &GPIO_InitStruct);

      GPIO_InitStruct.Pin                                = GPIO_PIN_2 | GPIO_PIN_11 | GPIO_PIN_13 | GPIO_PIN_14;
      GPIO_InitStruct.Mode                               = GPIO_MODE_AF_PP;
      GPIO_InitStruct.Pull                               = GPIO_NOPULL;
      GPIO_InitStruct.Speed                              = GPIO_SPEED_HIGH;
      GPIO_InitStruct.Alternate                          = GPIO_AF11_ETH;
      HAL_GPIO_Init(GPIOG, &GPIO_InitStruct);

      /* Enable the Ethernet global Interrupt */
      HAL_NVIC_SetPriority(ETH_IRQn, 0x7, 0);
      HAL_NVIC_EnableIRQ(ETH_IRQn);

      /* Enable Peripheral clock */
      __HAL_RCC_ETH_CLK_ENABLE();
   }
}

void HAL_ETH_MspDeInit(ETH_HandleTypeDef* ethHandle)
{
   debug_output_info(" \r\n");
   if (ethHandle->Instance == ETH)
   {
      /* Peripheral clock disable */
      __HAL_RCC_ETH_CLK_DISABLE();

      /** ETH GPIO Configuration    
      RMII_REF_CLK ----------------------> PA1
      RMII_MDIO -------------------------> PA2
      RMII_MDC --------------------------> PC1
      RMII_MII_CRS_DV -------------------> PA7
      RMII_MII_RXD0 ---------------------> PC4
      RMII_MII_RXD1 ---------------------> PC5
      RMII_MII_RXER ---------------------> PG2
      RMII_MII_TX_EN --------------------> PG11
      RMII_MII_TXD0 ---------------------> PG13
      RMII_MII_TXD1 ---------------------> PG14
      */
      HAL_GPIO_DeInit(GPIOG, GPIO_PIN_14 | GPIO_PIN_13 | GPIO_PIN_11 | GPIO_PIN_2);
      HAL_GPIO_DeInit(GPIOC, GPIO_PIN_1  | GPIO_PIN_4  | GPIO_PIN_5);
      HAL_GPIO_DeInit(GPIOA, GPIO_PIN_1  | GPIO_PIN_2  | GPIO_PIN_7);

      /* Peripheral interrupt Deinit*/
      HAL_NVIC_DisableIRQ(ETH_IRQn);
   }
}

static void low_level_init(struct netif *netif)
{ 
   uint32_t regvalue                                     = 0;
   HAL_StatusTypeDef hal_eth_init_status;

   UNUSED(regvalue);

   debug_output_info("MAC ADDRESS : %02X-%02X-%02X-%02X-%02X-%02X \r\n", MY_MAC_ADDR[0], MY_MAC_ADDR[1], MY_MAC_ADDR[2], MY_MAC_ADDR[3], MY_MAC_ADDR[4], MY_MAC_ADDR[5]);

   /* Init ETH */
   heth.Instance                                         = ETH;
   heth.Init.MACAddr                                     = &MY_MAC_ADDR[0];
   heth.Init.AutoNegotiation                             = ETH_AUTONEGOTIATION_ENABLE;
   heth.Init.Speed                                       = ETH_SPEED_100M;
   heth.Init.DuplexMode                                  = ETH_MODE_FULLDUPLEX;
   heth.Init.MediaInterface                              = ETH_MEDIA_INTERFACE_RMII;
   heth.Init.RxMode                                      = ETH_RXINTERRUPT_MODE;
   heth.Init.ChecksumMode                                = ETH_CHECKSUM_BY_HARDWARE;
   heth.Init.PhyAddress                                  = LAN8742A_PHY_ADDRESS;

   hal_eth_init_status                                   = HAL_ETH_Init(&heth);

   if (hal_eth_init_status == HAL_OK)
   {
      /* Set netif link flag */  
      netif->flags                                       |= NETIF_FLAG_LINK_UP;
   }
   else
   {
      debug_output_error("HAL_ETH_Init() failed !!! : %d \r\n", hal_eth_init_status);
   }

   /* Initialize Tx Descriptors list: Chain Mode */
   hal_eth_init_status                                   = HAL_ETH_DMATxDescListInit(&heth, DMATxDscrTab, &Tx_Buff[0][0], ETH_TXBUFNB);
   if (hal_eth_init_status != HAL_OK)
   {
      debug_output_error("HAL_ETH_DMATxDescListInit() failed : %d !!! \r\n", hal_eth_init_status);
   }
     
   /* Initialize Rx Descriptors list: Chain Mode  */
   hal_eth_init_status                                   = HAL_ETH_DMARxDescListInit(&heth, DMARxDscrTab, &Rx_Buff[0][0], ETH_RXBUFNB);
   if (hal_eth_init_status != HAL_OK)
   {
      debug_output_error("HAL_ETH_DMARxDescListInit() failed : %d !!! \r\n", hal_eth_init_status);
   }

#if LWIP_ARP || LWIP_ETHERNET
   /* set MAC hardware address length */
   netif->hwaddr_len                                     = ETH_HWADDR_LEN;

   /* set MAC hardware address */
   netif->hwaddr[0]                                      = heth.Init.MACAddr[0];
   netif->hwaddr[1]                                      = heth.Init.MACAddr[1];
   netif->hwaddr[2]                                      = heth.Init.MACAddr[2];
   netif->hwaddr[3]                                      = heth.Init.MACAddr[3];
   netif->hwaddr[4]                                      = heth.Init.MACAddr[4];
   netif->hwaddr[5]                                      = heth.Init.MACAddr[5];
  
  /* maximum transfer unit */
  netif->mtu                                             = 1500;
  
  /* Accept broadcast address and ARP traffic */
  /* don't set NETIF_FLAG_ETHARP if this device is not an ethernet one */
  #if LWIP_ARP
    netif->flags                                         |= NETIF_FLAG_BROADCAST | NETIF_FLAG_ETHARP;
  #else 
    netif->flags                                         |= NETIF_FLAG_BROADCAST;
  #endif /* LWIP_ARP */
  
/* create a binary semaphore used for informing ethernetif of frame reception */
   osSemaphoreDef(SEM);
   s_xSemaphore                                          = osSemaphoreCreate(osSemaphore(SEM), 1);

   /* Enable MAC and DMA transmission and reception */
   hal_eth_init_status                                   = HAL_ETH_Start(&heth); 
   if (hal_eth_init_status != HAL_OK)
   {
      debug_output_error("HAL_ETH_Start() failed : %d !!! \r\n", hal_eth_init_status);
   }

   /* create the task that handles the ETH_MAC */
   osThreadDef(EthIf, ethernetif_input, osPriorityRealtime, 0, INTERFACE_THREAD_STACK_SIZE);
   osThreadCreate(osThread(EthIf), netif);

#if 0 // from lwip application
   /* Read Register Configuration */
   HAL_ETH_ReadPHYRegister(&heth, PHY_ISFR, &regvalue);
   regvalue                                              |= (PHY_ISFR_INT4);

   /* Enable Interrupt on change of link status */ 
   HAL_ETH_WritePHYRegister(&heth, PHY_ISFR , regvalue);
  
   /* Read Register Configuration */
   HAL_ETH_ReadPHYRegister(&heth, PHY_ISFR , &regvalue);
#endif

#endif /* LWIP_ARP || LWIP_ETHERNET */
}

static err_t low_level_output(struct netif *netif, struct pbuf *p)
{
   err_t errval;
   struct pbuf *q;
   uint8_t *buffer                                       = (uint8_t *)(heth.TxDesc->Buffer1Addr);
   __IO ETH_DMADescTypeDef *DmaTxDesc;
   uint32_t framelength                                  = 0;
   uint32_t bufferoffset                                 = 0;
   uint32_t byteslefttocopy                              = 0;
   uint32_t payloadoffset                                = 0;
   DmaTxDesc                                             = heth.TxDesc;
   bufferoffset                                          = 0;

   /* copy frame from pbufs to driver buffers */
   for (q = p; q != NULL; q = q->next)
   {
      /* Is this buffer available? If not, goto error */
      if ((DmaTxDesc->Status & ETH_DMATXDESC_OWN) != (uint32_t)RESET)
      {
         errval                                          = ERR_USE;
         /* When Transmit Underflow flag is set, clear it and issue a Transmit Poll Demand to resume transmission */
         if ((heth.Instance->DMASR & ETH_DMASR_TUS) != (uint32_t)RESET)
         {
            /* Clear TUS ETHERNET DMA flag */
            heth.Instance->DMASR                         = ETH_DMASR_TUS;

            /* Resume DMA transmission*/
            heth.Instance->DMATPDR                       = 0;
         }
         debug_output_error("low_level_output() %d failed \r\n", errval);
         return errval;
      }

      /* Get bytes in current lwIP buffer */
      byteslefttocopy                                    = q->len;
      payloadoffset                                      = 0;

      /* Check if the length of data to copy is bigger than Tx buffer size*/
      while ((byteslefttocopy + bufferoffset) > ETH_TX_BUF_SIZE)
      {
         /* Copy data to Tx buffer*/
         memcpy((uint8_t*)((uint8_t*) buffer + bufferoffset), (uint8_t*)((uint8_t*) q->payload + payloadoffset), (ETH_TX_BUF_SIZE - bufferoffset));

         /* Point to next descriptor */
         DmaTxDesc                                       = (ETH_DMADescTypeDef *)(DmaTxDesc->Buffer2NextDescAddr);

         /* Check if the buffer is available */
         if ((DmaTxDesc->Status & ETH_DMATXDESC_OWN) != (uint32_t) RESET)
         {
            errval                                       = ERR_USE;
            /* When Transmit Underflow flag is set, clear it and issue a Transmit Poll Demand to resume transmission */
            if ((heth.Instance->DMASR & ETH_DMASR_TUS) != (uint32_t)RESET)
            {
               /* Clear TUS ETHERNET DMA flag */
               heth.Instance->DMASR                      = ETH_DMASR_TUS;

               /* Resume DMA transmission*/
               heth.Instance->DMATPDR                    = 0;
            }
            debug_output_error("low_level_output() %d failed \r\n", errval);
            return errval;
         }

         buffer                                          = (uint8_t *)(DmaTxDesc->Buffer1Addr);

         byteslefttocopy                                 = byteslefttocopy - (ETH_TX_BUF_SIZE - bufferoffset);
         payloadoffset                                   = payloadoffset + (ETH_TX_BUF_SIZE - bufferoffset);
         framelength                                     = framelength + (ETH_TX_BUF_SIZE - bufferoffset);
         bufferoffset                                    = 0;
      }

      /* Copy the remaining bytes */
      memcpy((uint8_t*)((uint8_t*)buffer + bufferoffset), (uint8_t*)((uint8_t*)q->payload + payloadoffset), byteslefttocopy);
      bufferoffset                                       = bufferoffset + byteslefttocopy;
      framelength                                        = framelength + byteslefttocopy;
   }

   /* Clean and Invalidate data cache */
   SCB_CleanInvalidateDCache();
   /* Prepare transmit descriptors to give to DMA */ 
   HAL_ETH_TransmitFrame(&heth, framelength);
   errval = ERR_OK;
   return errval;
}

static struct pbuf * low_level_input(struct netif *netif)
{
   struct pbuf *p                                        = NULL;
   struct pbuf *q                                        = NULL;
   uint16_t len                                          = 0;
   uint8_t *buffer;
   __IO ETH_DMADescTypeDef *dmarxdesc;
   uint32_t bufferoffset                                 = 0;
   uint32_t payloadoffset                                = 0;
   uint32_t byteslefttocopy                              = 0;
   uint32_t i                                            = 0;
   HAL_StatusTypeDef hal_status;
  
   /* get received frame */
   if ((hal_status = HAL_ETH_GetReceivedFrame_IT(&heth)) != HAL_OK)
   {
      return NULL;
   }

   /* Obtain the size of the packet and put it into the "len" variable. */
   len                                                   = heth.RxFrameInfos.length;
   buffer                                                = (uint8_t *) heth.RxFrameInfos.buffer;
  
   if (len > 0)
   {
      /* We allocate a pbuf chain of pbufs from the Lwip buffer pool */
      p                                                  = pbuf_alloc(PBUF_RAW, len, PBUF_POOL);
   }

   /* Clean and Invalidate data cache */
   SCB_CleanInvalidateDCache();

   if (p != NULL)
   {
      dmarxdesc                                          = heth.RxFrameInfos.FSRxDesc;
      bufferoffset                                       = 0;
      for (q = p; q != NULL; q = q->next)
      {
         byteslefttocopy                                 = q->len;
         payloadoffset                                   = 0;

         /* Check if the length of bytes to copy in current pbuf is bigger than Rx buffer size*/
         while ((byteslefttocopy + bufferoffset) > ETH_RX_BUF_SIZE)
         {
            /* Copy data to pbuf */
            memcpy((uint8_t*)((uint8_t*)q->payload + payloadoffset), (uint8_t*)((uint8_t*)buffer + bufferoffset), (ETH_RX_BUF_SIZE - bufferoffset));

            /* Point to next descriptor */
            dmarxdesc                                    = (ETH_DMADescTypeDef *)(dmarxdesc->Buffer2NextDescAddr);
            buffer                                       = (uint8_t *)(dmarxdesc->Buffer1Addr);

            byteslefttocopy                              = byteslefttocopy - (ETH_RX_BUF_SIZE - bufferoffset);
            payloadoffset                                = payloadoffset + (ETH_RX_BUF_SIZE - bufferoffset);
            bufferoffset                                 = 0;
         }
         /* Copy remaining data in pbuf */
         memcpy((uint8_t*)((uint8_t*)q->payload + payloadoffset), (uint8_t*)((uint8_t*)buffer + bufferoffset), byteslefttocopy);
         bufferoffset                                    = bufferoffset + byteslefttocopy;
      }
   }  
  
   /* Release descriptors to DMA */
   /* Point to first descriptor */
   dmarxdesc                                             = heth.RxFrameInfos.FSRxDesc;
   /* Set Own bit in Rx descriptors: gives the buffers back to DMA */
   for (i = 0; i < heth.RxFrameInfos.SegCount; i++)
   {  
      dmarxdesc->Status                                  |= ETH_DMARXDESC_OWN;
      dmarxdesc                                          = (ETH_DMADescTypeDef *)(dmarxdesc->Buffer2NextDescAddr);
   }
    
    /* Clear Segment_Count */
    heth.RxFrameInfos.SegCount                           = 0;  
  
   /* When Rx Buffer unavailable flag is set: clear it and resume reception */
   if ((heth.Instance->DMASR & ETH_DMASR_RBUS) != (uint32_t) RESET)
   {
      /* Clear RBUS ETHERNET DMA flag */
      heth.Instance->DMASR                               = ETH_DMASR_RBUS;
      /* Resume DMA reception */
      heth.Instance->DMARPDR                             = 0;
   }
   return p;
}
